--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#"style="color: aliceblue; background-color: blue;">About Us</a>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="contact.html"style="color: aliceblue; background-color: blue;">Contact Us</a>
 </h2></center>
-    <center><h1>About Us</h1></center>
+    <center><h1 style="background-color: black; color: aliceblue; font-size:50px;">About Us</h1></center>
     <img src="img/aboutpic1-removebg-preview.png" alt="" height="500px" width="500px"> <img src="img/aboutpic2.png" alt="" height="500" width="500"> <img src="img/aboutpic4.jpg" alt="" height="500" width="500">
-    <center><h2 style="font-size: 35px;">Our Story</h2></center>
+    <center><h2 style="font-size: 35px; background-color: rgb(135, 206, 235);">Our Story</h2></center>
     <center><p style="font-size: 20px;">Welcome to <b> "Breads Bakery"</b>, where every creation tells a story of passion, tradition, and flavor. Our bakery has been a cherished part of the community for 40 years, bringing smiles to our customers' faces with each delicious bite.
 
         Our journey began 1983, when we first opened our doors with a vision to offer freshly baked goods made with love and the finest ingredients. What started as a humble storefront has blossomed into a beloved destination for those seeking artisanal treats and warm, welcoming service.
