--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,9 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="about.html" style="color: aliceblue; background-color: blue;">About Us</a>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" style="color: aliceblue; background-color: blue;">Contact Us</a>
 </h2></center>
-    <center><h1 style="font-size: 50px;">Contact Us</h1></center>
+    <center><h1 style="font-size: 50px; background-color: black; color: aliceblue;">Contact Us</h1></center>
     <center><img src="img/pic1.jpg" alt="" height="600" width="1550"></center>
-    <center><h2 style="font-size: 40px;">Our Outlets</h2></center>
+    <center><h2 style="font-size: 40px; background-color: rgb(58, 136, 245);">Our Outlets</h2></center>
     <center><table>
         <tr>
             <td><fieldset><center><h2>Gulshan-e-Iqbal</h2><p>Gulshan-e-Iqbal Block ABC Karachi</p></center></fieldset></td> &nbsp;&nbsp;
@@ -23,7 +23,7 @@
     </table></center>
     <br>
     <br>
-    <center><h2>For More Details Contact Us Or Visit Our Website</h2></center>
+    <center><h2 style="background:  rgb(135, 206, 235);;">For More Details Contact Us Or Visit Our Website</h2></center>
     <center><h4><img src="img/icon ph.jpeg" alt="" height="20px" width="20px">+92-312-456-7890</h4></center>
     <center><h4><img src="img/webicon.png" alt="" height="20px" width="20px">www.crispycrust.com</h4></center>
     <center><h3>M.Aliyan Pirzada<br>Roll No:8551<br>Karachi</h3></center>
