--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </h2></center> 
     
 <center><img src="img/pic1.jpg" alt="" height="750" width="1550"></center>
-<center><h1 style="font-size: 50px;">Our Featured Products</h1></center>
+<center><h1 style="font-size: 50px; background-color: rgba(0, 0, 0, 0.656); color: white;">Our Featured Products</h1></center>
 <center>
 <table>
     <tr>
