--- a/menu.html
+++ b/menu.html
@@ -11,12 +11,12 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="about.html" style="color: aliceblue; background-color: blue;">About Us</a>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="contact.html" style="color: aliceblue; background-color: blue;">Contact Us</a>
 </h2></center>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<center><h1 style="font-size: 40px;">Menu</h1></center>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<center><h1 style="font-size: 40px; background-color: black; color: aliceblue;">Menu</h1></center>
         <br>
-    <center><h1 style="font-size: 35px;">Cakes</h1></center>
+    <center><h1 style="font-size: 35px; background-color: rgb(135, 206, 235);">Cakes</h1></center>
        <center><img src="img/cake1.jpg" alt="" height="600" width="1550"></center>
        <br>
-       <center><h1>Our Special Treat</h1></center>
+       <center><h1 style=" background-color: rgb(70, 131, 244);">Our Special Treat</h1></center>
        <center> <table><tr><td>
       <fieldset><center><img src="img/cake2.jpeg" alt="" height="300" width="400"></center><center><h2>Molten chocolate cake</h2><p>Molten chocolate cake is a French dessert that <br> consists of a chocolate cake with a liquid chocolate core. <br> It is named for that molten center, and it is also <br> known as mi-cuit au chocolat, chocolat <br> coulant, chocolate lava cake, or simply lava cake.</p></center></fieldset></td>
       <td><fieldset><center><img src="img/cake3.avif" alt="" height="300" width="400"></center><center><h2>Blissful Berry Burst Cake</h2><p>Indulge in the divine delight of our Blissful <br> Berry Burst Cake, a masterpiece crafted to tantalize your taste <br> buds and captivate your senses. Picture layers of moist, <br> velvety sponge cake infused with the luscious <br> essence of ripe berries.</p></center></fieldset></td> 
@@ -39,7 +39,7 @@
     </tr>
 </table></center>
 
-<center><h1 style="font-size: 35px;">Biscuits & Cookies</h1></center>
+<center><h1 style="font-size: 35px; background-color: rgb(135, 206, 235); ;">Biscuits & Cookies</h1></center>
 <center><img src="img/biscuits1.jpg" alt="" height="600" width="1550"></center>
 <center><table>
     <tr>
@@ -55,7 +55,7 @@
     </tr>
 </table></center>
 
-<center><h1 style="font-size: 35px;">Patties</h1></center>
+<center><h1 style="font-size: 35px; background-color:  rgb(135, 206, 235);;">Patties</h1></center>
 <center><img src="img/paties1.jpg" alt="" height="600" width="1550"></center>
 <center><table>
     <tr>
